syntax = "proto3";

package go.micro.service.upload;

service UploadService {
    // 获取上传入口地址
    rpc UploadEntry(ReqEntry) returns (RespEntry) {}
}

message ReqEntry {
}

message RespEntry {
    int32 code = 1;
    string message = 2;
    string entry = 3;
}